<resources>
    <string name="app_name">Human Activity Recognition</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="probability">Probability</string>
    <string name="downstairs">Downstairs</string>
    <string name="jogging">Jogging</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="upstairs">Upstairs</string>
    <string name="walking">Walking</string>
    <string name="laying">Laying</string>
</resources>
